deploy/ui-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
    kompose.cmd: >-
      C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe convert
      -f ./docker-compose.yml -o ./deploy/
    kompose.version: 1.26.1 (a9d05d509)
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kompose.cmd":"C:\\ProgramData\\chocolatey\\lib\\kubernetes-kompose\\tools\\kompose.exe
      convert -f ./docker-compose.yml -o ./deploy/","kompose.version":"1.26.1
      (a9d05d509)"},"creationTimestamp":null,"labels":{"io.kompose.service":"ui"},"name":"ui","namespace":"shiv-gupta121-dev"},"spec":{"replicas":1,"selector":{"matchLabels":{"io.kompose.service":"ui"}},"strategy":{},"template":{"metadata":{"annotations":{"kompose.cmd":"C:\\ProgramData\\chocolatey\\lib\\kubernetes-kompose\\tools\\kompose.exe
      convert -f ./docker-compose.yml -o ./deploy/","kompose.version":"1.26.1
      (a9d05d509)"},"creationTimestamp":null,"labels":{"io.kompose.service":"ui"}},"spec":{"containers":[{"args":["mlflow","server","--backend-store-uri","mysql+pymysql://mlflow_user:mlflow_pass@mysql:3306/mlflow","--default-artifact-root","./mlruns","--host","0.0.0.0","--port","5000"],"image":"shivgupta121/mflowtrackingserver-ui:mlflow_ctr","name":"mlflow-ui","ports":[{"containerPort":5000}],"resources":{},"volumeMounts":[{"mountPath":"/mlruns","name":"mlruns"}]}],"restartPolicy":"Always","volu [...]
  resourceVersion: '1742275336'
  name: ui
  uid: 0c865bcb-c9c0-4d90-967c-367d012c3cda
  creationTimestamp: '2022-11-21T18:45:43Z'
  generation: 1
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: apps/v1
      time: '2022-11-21T18:45:43Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            .: {}
            'f:kompose.cmd': {}
            'f:kompose.version': {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
          'f:labels':
            .: {}
            'f:io.kompose.service': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:replicas': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:annotations':
                .: {}
                'f:kompose.cmd': {}
                'f:kompose.version': {}
              'f:labels':
                .: {}
                'f:io.kompose.service': {}
            'f:spec':
              'f:containers':
                'k:{"name":"mlflow-ui"}':
                  'f:image': {}
                  'f:volumeMounts':
                    .: {}
                    'k:{"mountPath":"/mlruns"}':
                      .: {}
                      'f:mountPath': {}
                      'f:name': {}
                  'f:terminationMessagePolicy': {}
                  .: {}
                  'f:resources': {}
                  'f:args': {}
                  'f:terminationMessagePath': {}
                  'f:imagePullPolicy': {}
                  'f:ports':
                    .: {}
                    'k:{"containerPort":5000,"protocol":"TCP"}':
                      .: {}
                      'f:containerPort': {}
                      'f:protocol': {}
                  'f:name': {}
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
              'f:volumes':
                .: {}
                'k:{"name":"mlruns"}':
                  .: {}
                  'f:emptyDir': {}
                  'f:name': {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2022-11-21T18:45:46Z'
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      subresource: status
  namespace: shiv-gupta121-dev
  labels:
    io.kompose.service: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: ui
      annotations:
        kompose.cmd: >-
          C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert -f ./docker-compose.yml -o ./deploy/
        kompose.version: 1.26.1 (a9d05d509)
    spec:
      volumes:
        - name: mlruns
          emptyDir: {}
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: mlflow-ui
          ports:
            - containerPort: 5000
              protocol: TCP
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: mlruns
              mountPath: /mlruns
          terminationMessagePolicy: File
          image: 'shivgupta121/mflowtrackingserver-ui:mlflow_ctr'
          args:
            - mlflow
            - server
            - '--backend-store-uri'
            - 'mysql+pymysql://mlflow_user:mlflow_pass@mysql:3306/mlflow'
            - '--default-artifact-root'
            - ./mlruns
            - '--host'
            - 0.0.0.0
            - '--port'
            - '5000'
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Available
      status: 'True'
      lastUpdateTime: '2022-11-21T18:45:46Z'
      lastTransitionTime: '2022-11-21T18:45:46Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2022-11-21T18:45:46Z'
      lastTransitionTime: '2022-11-21T18:45:43Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "ui-66c55b5449" has successfully progressed.
